<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="emoji_morning">&#127750;</string>
    <string name="emoji_afternoon">&#127961;</string>
    <string name="emoji_night">&#127747;</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="profile_legal_disclaimer"><![CDATA[Soho House is not responsible for any content you upload on your social accounts and link to through your profile. We can remove your social accounts at any time. Please see the “use and acceptable conduct” section of our Terms & Conditions for more information.]]></string>
    <string name="view_profile_cta">View profile</string>
    <string name="enquiry_add_active_membership">Add Active membership</string>
    <string name="enquiry_active_placeholder1">Active membership enquiry</string>
    <string name="enquiry_active_placeholder2">I would like to learn more about Active membership</string>
    <string name="enquiry_active_plus_placeholder1">Active Plus membership enquiry</string>
    <string name="enquiry_active_plus_placeholder2">I would like to learn more about Active Plus membership</string>
    <string name="find_out_more_cta">Find out more</string>
    <string name="tickets_lottery_drawn_screening_paid_label">A deposit is required for each allocated seat, and is redeemable at the bar on arrival</string>
    <string name="payment_confirm_deposit">Confirm deposit</string>
    <string name="explore_events_event_deposit_label">Deposit Policy</string>
    <string name="how_many_tickets">How many tickets would you like?</string>
    <string name="event_type_event">Event</string>
    <string name="app_accept_terms_cta">Accept &amp; Continue</string>
    <string name="explore_events_filter_all_houses_label">View more Houses</string>
    <string name="onboarding_house_board_fay_estes">Fay Estes</string>
    <string name="onboarding_house_board_kobi_dawson">Kobi Dawson</string>
    <string name="onboarding_house_board_kimberly_aberman">Kimberly Aberman</string>
    <string name="onboarding_house_board_post_timestamp_2_min">2m</string>
    <string name="onboarding_house_board_post_timestamp_2_hour">2h</string>
    <string name="onboarding_house_board_post_1">We\'ll have a DJ in the lounge tonight from 8pm to 10pm. Drop by to enjoy some great music and get to know your fellow members</string>
    <string name="onboarding_house_board_post_2">Looking for someone to help with music on a documentary I\'m working on. I\'m in the drawing room or just email me at garrettdocs@gmail.com.</string>
    <string name="onboarding_house_board_post_3">I\'m on the patio; feel free to drop by for a drink if you\'re at the house.</string>
    <string name="app_onboarding_welcome_title">Welcome to \nSoho House</string>
    <string name="label_my_bookings">Bookings</string>
    <string name="event_cancellation_supporting_screening_paid">A {price} deposit will be taken per allocated seat. This deposit may be redeemed at the cinema bar. If you choose to cancel your seat(s), you will be refunded. If you have not been allocated seats you will not be charged. For full T&amp;Cs, please see our FAQ page.</string>
    <plurals name="explore_events_guests_welcome">
        <item quantity="one">You can book for you and {number} guest this {event} when confirmed on the guest list. Please ensure you have booked for everyone.</item>
        <item quantity="other">You can book for you and {number} guests this {event} when confirmed on the guest list. Please ensure you have booked for everyone.</item>
    </plurals>
    <plurals name="explore_events_guests_welcome_ticketless">
        <item quantity="one"> You and {number} guest are welcome to join this {event}.</item>
        <item quantity="other"> You and {number} guests are welcome to join this {event}.</item>
    </plurals>
    <string name="explore_events_member_welcome">You can attend this {event} when confirmed on the guest list.</string>
    <string name="explore_events_member_welcome_ticketless">You are welcome to join the {event}.</string>
    <string name="event_type_class">Class</string>
    <string name="house_board_menu_title" translatable="false">House board</string>
    <string name="web_ssl_certificate_error_title">SSL Certificate Error</string>
    <string name="web_ssl_certificate_error_not_trusted">The certificate authority is not trusted.</string>
    <string name="web_ssl_certificate_error_expired">The certificate has expired.</string>
    <string name="web_ssl_certificate_error_not_hostname_mismatch">The certificate Hostname mismatch.</string>
    <string name="web_ssl_certificate_error_not_yet_valid">The certificate is not yet valid.</string>
    <string name="web_ssl_certificate_error_generic">SSL Certificate error.</string>
    <string name="web_ssl_certificate_error_continue_cta">Continue</string>
    <string name="web_ssl_certificate_error_cancel_cta">Cancel</string>
    <string name="this_month">This month</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="next_week">Next week</string>
    <string name="in_the_distant_future">In the future</string>
    <string name="january">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_bookings">No bookings</string>
    <string name="upcoming_booings">Upcoming Bookings</string>
    <string name="see_all">See all</string>
    <string name="bookings_empty">No bookings</string>
    <string name="bookings_empty_body">Once you book an event, it will be displayed here</string>
    <string name="past_bookings_supporting_text">See events and rooms you\'ve booked in the past</string>
    <string name="past_bookings_supporting_text_friends">See rooms you\'ve booked in the past</string>
    <string name="upcoming_bookings_supporting_text">When booking a bedroom through our website or app, it will now appear in your upcoming bookings. Please note, any previous bookings made via a third party will not.</string>
    <string name="upcoming_bookings_header">Upcoming</string>
    <string name="booking_history_header">Booking history</string>
    <string name="browse_more_events">Browse more events</string>
    <string name="thanks_for_coming">Thanks for coming, %s</string>
    <string name="we_hope_you_enjoyed">We hope you enjoyed</string>
    <string name="global_perk_label">Global</string>
    <string name="alt_image_content_description">Image</string>
    <string name="notification_center_now">Now</string>
    <string name="notification_center_minutes_ago_abbr">{minutes} m</string>
    <string name="notification_center_hours_ago_abbr">{hours} h</string>
    <string name="notification_center_days_ago_abbr">{days} d</string>
    <string name="notification_center_weeks_ago_abbr">{weeks} w</string>
    <string name="show_less_cta">Show less</string>
    <string name="settings_cta">Settings</string>
    <string name="clear_all_notifications">Clear all notifications</string>
    <string name="clear_cta">Clear</string>
    <string name="view_cta">View</string>
    <string name="member_since_label">Since %1$s</string>
    <string name="label_founding_member">Founding Member</string>
    <string name="snack_bar_title_online">You\'re online</string>
    <string name="snack_bar_title_offline">You\'re offline</string>
    <string name="home_perks_header">Member Benefits</string>
    <string name="home_perks_supporting_header">Discover member benefits, offers and exclusives</string>
    <string name="home_perks_see_all_cta">See all</string>
    <string name="corona_update_header">House updates</string>
    <string name="corona_update_subheader">Everything you need to know, from booking your visit to inviting guests via the SH.APP</string>
    <string name="corona_update_go_cta">Go</string>
    <string name="gating_maintenance_header">Sorry, we are under maintenance</string>
    <string name="gating_maintenance_supporting">Check back shortly to access the app</string>
    <string name="more_terms_and_policies_cta">Terms &amp; Policies</string>
    <string name="welcome_member_sign_in">Member sign in</string>
    <string name="bedrooms_label">Bedrooms</string>
    <string name="home_discover_label">Discover</string>
    <string name="home_nav_house_notes_label">Member Stories</string>
    <string name="home_nav_houses_label">Houses</string>
    <string name="cta_cancel">Cancel</string>
    <string name="membership_card_dialog_show_to_redeeem">Show this membership card to a member of the staff to redeem</string>
    <string name="membership_card_dialog_redeem_your_benefit">Redeem your benefit</string>
    <string name="membership_card_dialog_cta">Done</string>
    <string name="book_a_table_select_location">Select location</string>
    <string name="book_a_table_select_date">Select date</string>
    <string name="book_a_table_select_time">Select time</string>
    <string name="book_a_table_select_seats">Number of seats</string>
    <string name="leave_location">Leave venue</string>
    <string name="traffic_lights_description">Set your status to connect with other members in the House</string>
    <string name="traffic_list_first_visit_title">Welcome to\n %s House</string>
    <string name="confirm_my_status">Confirm my status</string>
    <string name="available_title">I’m available</string>
    <string name="available_subtitle">Meet available members in the House</string>
    <string name="connections_only_title">Connections only</string>
    <string name="connections_only_subtitle">Allow my connections to see me</string>
    <string name="not_available_title">I’m unavailable</string>
    <string name="not_available_subtitle">Hide my profile from members</string>
    <string name="update_your_status">Update your status</string>
    <string name="confirm">Confirm</string>
    <string name="connect_include_message">Include a message</string>
    <string name="connect_include_message_description">Do you want to include a message with your request? This makes sure your request is more personal</string>
    <string name="connect_write_message">Write a message</string>
    <string name="connect_send_request_without">Send request without</string>
    <string name="u27DiscountDetailsHeader">Under 27 discount</string>
    <string name="u27DiscountDetailsBody">Under 27 members are eligible for a 50% discount on food and beverage.\n\n\nThe discount is only valid for tabs settled on the day by the customer and will be automatically applied on the following days and times:</string>
    <string name="housepay_u27_discount_monday_label">Monday</string>
    <string name="housepay_u27_discount_all_day_label">All day</string>
    <string name="housepay_u27_discount_tues_weds_label">Tuesday and Wednesday</string>
    <string name="housepay_u27_discount_after_10_label">After 10:00pm</string>
    <string name="housepay_u27_discount_sunday_label">Sunday</string>
    <string name="housepay_u27_discount_after_4_label">After 4:00pm</string>
    <string name="housepay_u27_discount_details_footer">If you have any questions about your discount, please speak to a member of staff. Terms and conditions apply.</string>
    <string name="housepay_landing_title">Let your server know you want to open a tab</string>
    <string name="housepay_benefit_1">See your tab in real time</string>
    <string name="housepay_benefit_2">Settle your bill when you’re ready</string>
    <string name="housepay_benefit_3">Quick and easy payment</string>
    <string name="housepay_benefit_4">Receipts saved in-app</string>
</resources>