<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dp_16"
    android:paddingVertical="@dimen/dp_12">

    <TextView
        android:id="@+id/title"
        style="@style/Body.014"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/update_your_status"
        android:textColor="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:contentDescription="@string/alt_close_label"
        android:scaleType="center"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:tint="?colorPrimary" />

    <com.sohohouse.seven.connect.trafficlights.TrafficLightButton
        android:id="@+id/unavailableButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/traffic_light_first_visit_btn_bkg"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:statusTint="?colorTrafficLightUnavailable"
        app:trafficSubtitle="@string/not_available_title"
        app:trafficTitle="@string/not_available_subtitle" />

    <com.sohohouse.seven.connect.trafficlights.TrafficLightButton
        android:id="@+id/connectionsOnlyButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/traffic_light_first_visit_btn_bkg"
        app:layout_constraintTop_toBottomOf="@id/unavailableButton"
        app:statusTint="?colorTrafficLightConnectionsOnly"
        app:trafficSubtitle="@string/connections_only_subtitle"
        app:trafficTitle="@string/connections_only_title" />

    <com.sohohouse.seven.connect.trafficlights.TrafficLightButton
        android:id="@+id/availableButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/traffic_light_first_visit_btn_bkg"
        app:layout_constraintTop_toBottomOf="@id/connectionsOnlyButton"
        app:statusTint="?colorTrafficLightAvailable"
        app:trafficSubtitle="@string/available_title"
        app:trafficTitle="@string/available_subtitle" />

    <com.sohohouse.seven.connect.trafficlights.SingleSelectableGroup
        android:id="@+id/selectableGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="availableButton, connectionsOnlyButton, unavailableButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm"
        style="@style/Button.Secondary.Dark.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@+id/availableButton" />

    <TextView
        android:id="@+id/leave"
        style="@style/Body.014.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/leave_location"
        android:layout_marginBottom="@dimen/dp_8"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>