<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_16"
    android:background="?attr/colorLayer2"
    android:paddingTop="@dimen/dp_24"
    android:paddingBottom="@dimen/dp_22">

    <TextView
        style="@style/Header.022"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_include_message" />

    <TextView
        style="@style/Body.014.Narrow.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/connect_include_message_description" />

    <Button
        android:id="@+id/write_message"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/connect_write_message"
        tools:textColor="@color/black" />

    <TextView
        android:id="@+id/send_request"
        style="@style/Body.014.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/connect_send_request_without"
        tools:textColor="@color/white" />

</LinearLayout>