<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/housepay_landing_title"
            style="@style/Header.030"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_24"
            android:text="@string/housepay_landing_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="@dimen/dp_24"
            android:scaleType="centerCrop"
            android:src="@drawable/house_pay_landing"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Body.014"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/housepay_benefit_1"
            app:drawableStartCompat="@drawable/ic_checkmark"
            app:drawableTint="@color/white" />

        <TextView
            style="@style/Body.014"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/housepay_benefit_2"
            app:drawableStartCompat="@drawable/ic_checkmark"
            app:drawableTint="@color/white" />

        <TextView
            style="@style/Body.014"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/housepay_benefit_3"
            app:drawableStartCompat="@drawable/ic_checkmark"
            app:drawableTint="@color/white" />

        <TextView
            style="@style/Body.014"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/housepay_benefit_4"
            app:drawableStartCompat="@drawable/ic_checkmark"
            app:drawableTint="@color/white" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
