<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_16"
    android:paddingTop="@dimen/dp_24"
    android:paddingEnd="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_24">

    <TextView
        android:id="@+id/title"
        style="@style/Header.024"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/membership_card_dialog_redeem_your_benefit" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/body_02.light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/membership_card_dialog_show_to_redeeem" />

    <com.sohohouse.seven.common.views.MembershipCardView
        android:id="@+id/membership_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24" />

    <Button
        android:id="@+id/button"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:paddingTop="@dimen/dp_11"
        android:paddingBottom="@dimen/dp_11"
        android:text="@string/membership_card_dialog_cta" />

</LinearLayout>